Test on Python 3.6 (allowed to fail)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ before_install:
 install: false
 script: false
 jobs:
+  fast_finish: true
+  allow_failures:
+    - python: '3.6'
   include:
     # test stage + frontend tests start here
     - stage: test
@@ -30,19 +33,44 @@ jobs:
         - yarn lint-css
         - yarn test
         - yarn coverage
-    # backend tests start here
-    - name: 'Backend tests'
-      python:
-        - 2.7.10
+    # backend tests (py2.7) start here
+    - name: 'Backend tests (py2.7)'
+      python: '2.7.10'
+      env:
+        - TOXENV=py27,lint
       install:
         - pip install --upgrade pip
         - pip install --upgrade tox
       script:
         - tox -v --recreate
-    # dredd tests start here
-    - name: 'Dredd tests'
-      python:
-        - 2.7.10
+    # backend tests (py3.6) start here
+    - name: 'Backend tests (py3.6)'
+      python: '3.6'
+      env:
+        - TOXENV=py36
+      install:
+        - pip install --upgrade pip
+        - pip install --upgrade tox
+      script:
+        - tox -v --recreate
+    # dredd tests (py2.7) start here
+    - name: 'Dredd tests (py2.7)'
+      python: '2.7.10'
+      install:
+        - pip install --upgrade pip
+        - pip install dredd_hooks
+        - pip install 'PyYAML<4'
+        - pip install six
+        - nvm install v10.7.0
+        - 'curl -o- -L https://yarnpkg.com/install.sh | bash'
+        - 'export PATH="$HOME/.yarn/bin:$PATH" && yarn install --ignore-scripts'
+      script:
+        - yarn test-api
+      after_failure:
+        - cat ./dredd/data/Logs/application.log
+    # dredd tests (py3.6) start here
+    - name: 'Dredd tests (py3.6)'
+      python: '3.6'
       install:
         - pip install --upgrade pip
         - pip install dredd_hooks
